--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -31,15 +31,15 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center">
-                        <div class="social">
+                        <!--div class="social">
                             <a href="javascript:void(0)" class="btn  btn-facebook" data-toggle="tooltip" title="Login with Facebook"> <i aria-hidden="true" class="fa fa-facebook"></i> </a>
                             <a href="javascript:void(0)" class="btn btn-googleplus" data-toggle="tooltip" title="Login with Google"> <i aria-hidden="true" class="fa fa-google-plus"></i> </a>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
                 <div class="form-group m-b-0">
                     <div class="col-sm-12 text-center">
-                        No tiene una cuenta? <a href="pages-register2.html" class="text-primary m-l-5"><b>Sign Up</b></a>
+                        No tiene una cuenta? <a [routerLink]="['/register']" class="text-primary m-l-5"><b>Sign Up</b></a>
                     </div>
                 </div>
             </form>
