--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,3 +1,41 @@
-<p>
-  progress works!
-</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Barra de Progreso</h5>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" [attr.ariaValuenow]="progreso1" aria-valuemax="100" [style.width]="progreso1 + '%'"></div>
+
+                </div>
+                <br>
+                <div class="progress">
+
+                    <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="75" [attr.ariaValuenow]="progreso2" aria-valuemax="100" [style.width]="progreso2 + '%'"></div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+
+                <app-incrementador (cambioValor)="progreso1 = $event" nombre="Progress control" [progreso]="progreso1"></app-incrementador>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="col-6 ">
+        <div class="card ">
+            <div class="card-body ">
+                <app-incrementador (cambioValor)="progreso2 = $event" nombre="Progress control 2" [progreso]="progreso2"></app-incrementador>
+
+            </div>
+        </div>
+    </div>
+
+</div>
